@@ -13,13 +13,24 @@ class Register extends CI_Model {
 		parent::__construct();
 	}
 	
-	public function register_user($player, $pwhash)
+	public function check_registration($player)
+	{
+		// get data from the database to see if player already exists
+		$data = $this->db->get_where('players', array('player' => $player))->result_array();
+		
+		if(empty($data))
+		{
+        return TRUE;
+		}
+	}
+	
+	public function register_user($player, $password)
 	{
 		$data=array(
 		'player'=> $player,
 		'peanuts'=> '200',
 		'adminrole'=> FALSE,
-		'pwhash'=> $pwhash
+		'pwhash'=> $this->password_hasher($password) //this is temporary, we need to push the user's pw into the password_hasher() function after that's done
 		);
 		
 		$this->db->insert('players', $data);
@@ -27,8 +38,11 @@ class Register extends CI_Model {
 		// This inserts the newly registered user into the DB players table
 	}
 	
-	public function password_hasher()
+	public function password_hasher($password)
 	{
-		$hash=
+		
+		$hash = password_hash ( $password , PASSWORD_BCRYPT);
+		
+		return $hash;
 	}
 }
