@@ -12,7 +12,7 @@
         <input type="text" name="action" value="{login_action}" style="display:none">
 		<input type="text" name="password" placeholder="password" style="display:{login_visibility}">
         <input type="submit" value="{login_submit_text}">
-		<a href="register/" style="display:{login_visibility}">Click here to Register</a>
+		<a href="registration/" style="display:{login_visibility}">Click here to Register</a>
     </form>    
 </div>
 <ul class="nav">    
