@@ -6,14 +6,14 @@
 				<table id="registertable">
 					<tr>
 						<td>Username: </td>
-						<td><input type="text" name="username" placeholder="Username"></td>
+						<td><input type="text" name="player" placeholder="Username"></td>
 					</tr>
 					<tr>
 						<td>Password: </td>
 						<td><input type="text" name="password" placeholder="password"></td>
 					</tr>
 					<tr>
-						<td><input type="text" name="action" value="{register_action}" style="display:none"></td>
+						<td></td>
 						<td><input type="submit" value="Register"></td>
 					</tr>
 				</table>
